--- a/vue-src/package.json
+++ b/vue-src/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.0",
     "muse-ui": "^3.0.2",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
